Headless CI windows fix.